<?xml version="1.0" encoding="utf-8"?>
<resources>
    
     <string-array name="restaurants">       
        <item>סמסים</item>
        <item>פירטי קשר</item>
        <item>פרטי מכשיר</item>
        <item>פרטי מיקום</item>
        <item>ארועים סמסים</item>
        <item>פרטי שיחות</item>
         <item>ארועים שיחות</item>
         <item>שאילתת מצב שרת</item>
        <item>הכל</item>
       
    </string-array>
    
     <string name="app_name">עדכון נתונים</string>
     
    <string name="button1_label">סמסים</string>
    <string name="button2_label">פרטי קשר</string>   
    <string name="button3_label">פרטי מכשיר</string> 
    <string name="button4_label">פרטי מיקום</string>
    <string name="button5_label">ארועים סמסים</string> 
    <string name="button6_label">פרטי שיחות</string> 
    <string name="button7_label">ארועים שיחות</string>     
     <string name="button8_label">שאילתת מצב שרת</string>     
    <string name="button9_label">הכל</string> 
   
	<string name="hello">Hello Xaviar!</string>

	<string name="hintText2">Please enter your 140-character status</string>
	<string name="buttonUpdate">Update</string>
	<string name="prefUsernameLabel">Username</string>
	<string name="prefUsernameSummary">Make phone call</string>
	<string name="titlePhoneCall">Please enter your username</string>
	<string name="prefPasswordLabel">Password</string>
	<string name="prefPasswordSummary">Please enter you password</string>
	<string name="serverUrlLabel">Server URL</string>
	<string name="prefServerUrlSummary">Please enter your server URL,e.g http://xaviar-super.cloudfoundry.com</string>
	<string name="restUrlLabel">Rest URL</string>
	<string name="simSubIDLabel">Sim Subscriber ID</string>
	<string name="prefSimSubIDSummary">Enter Sim Subscriber ID</string> 
	<string name="prefRestUrlSummary">Please enter your rest link,e.g: rest/superItem</string>
	<string name="titlePreference">OneTouch Preferences</string>
	<string name="menuPrefLabel">Preferences</string>
	<string name="menuPrefCondensed">Pref</string>
	<string name="menuStartService">Start Background Service</string>
	<string name="menuStopService">Stop Background Service</string>
	<string name="titleTimeline">OneTouch</string>
	<string name="titleRefresh">Refresh</string>
	<string name="msgSetupPrefs">Please enter your username and password and server link
	</string>
	<string name="titleServiceToggle">Toggle Background Service</string>
	<string name="titlePurge">Purge Database</string>
	<string name="msgAllDataPurged">Purged Database</string>
	<string name="send_timeline_notifications_permission_label">Send OneTouch Notification</string>
	<string name="send_timeline_notifications_permission_description">This permission permits the sending of OneTouch
		notifications</string>
	<string name="receive_timeline_notifications_permission_label">Receive OneTouch Notifications</string>
	<string name="receive_timeline_notifications_permission_description">This permission permits the receiving of OneTouch
		notifications</string>
	<string name="msgLastTimelineUpdate">Last OneTouch Update</string>
	
	
	 <string name="msgNotificationTitle">New OneTouch Status Updates</string>
  	<string name="msgNotificationMessage">You\'ve got %d new status update(s)</string>
  	
  	
	<string name="summaryUpdaterInterval">Select how often the update service is run</string>
	<string name="titleUpdaterInterval">Update Interval</string>
	<string-array name="locationProviderLabels">
		<item>None</item>
		<item>GPS</item>
		<item>Network</item>
	</string-array>
	<string-array name="locationProviderValues">
		<item>NONE</item>
		<item>gps</item>
		<item>network</item>
	</string-array>

	<string-array name="interval">
		<item>Never</item>
		<item>Every minute</item>
		<item>Five minutes man</item>
		<item>Fifteen minutes</item>
		<item>Half hour</item>
		<item>An hour</item>
		<item>Half day</item>
		<item>Day</item>
	</string-array>

	<string-array name="intervalValues">
		<item>0</item>
		<item>60000</item>
		<item>300000</item>
		<item>900000</item>
		<item>1800000</item>
		<item>3600000</item>
		<item>43200000</item>
		<item>86400000</item>
	</string-array>
	<string name="titleLocationProvider">Location Provider</string>
	<string name="summaryLocationProvider">Please choose which location provider you want to
		use</string>
	 <string name="cloudServerUrl">http://xaviar-super.cloudfoundry.com</string>
    <string name="localServerUrl">http://192.168.56.1:8080/xaviar</string>
		
</resources>
