<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference android:title="@string/prefUsernameLabel"
		android:key="username" android:summary="@string/prefUsernameSummary"></EditTextPreference>
	<EditTextPreference android:title="@string/prefPasswordLabel"
		android:key="password" android:summary="@string/prefPasswordSummary"
		android:password="true"></EditTextPreference>
	
	<EditTextPreference android:title="@string/simSubIDLabel"
		android:summary="@string/prefSimSubIDSummary" android:key="simSubID"></EditTextPreference>
	
	<EditTextPreference android:title="@string/serverUrlLabel"
		android:summary="@string/prefServerUrlSummary" android:key="serverurl"></EditTextPreference>
	<EditTextPreference android:title="@string/restUrlLabel"
		android:summary="@string/prefRestUrlSummary" android:key="resturl"></EditTextPreference>
	
	<ListPreference android:entryValues="@array/locationProviderValues"
		android:entries="@array/locationProviderLabels" android:key="locationProvider"
		android:summary="@string/summaryLocationProvider" android:title="@string/titleLocationProvider" />
	<ListPreference android:entryValues="@array/intervalValues"
		android:summary="@string/summaryUpdaterInterval" android:title="@string/titleUpdaterInterval"
		android:entries="@array/interval" android:key="interval" />
</PreferenceScreen>
